--- a/game.html
+++ b/game.html
@@ -64,6 +64,13 @@ function scrollFunction() {
 <div class="product-list">
 
         <div class="product">
+                <img src="image/msfsx.jpg" height="300" width="250">
+                <h3 style="color: aliceblue;">Microsoft flight</h3>
+                <h3 style="color: rgb(255, 255, 255);">simulator X</h3>
+                <h2><a href="https://torrent5.net/en/uploads/files/2017-05/1493626434_microsoft-flight-simulator-x-deluxe-edition.torrent" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
+        <div class="product">
                 <img src="image/tekken8.jpg" height="300" width="250">
                 <h3 style="color: aliceblue;">Tekken 8</h3>
                 <h3 style="color: rgb(0, 0, 0);">.</h3>
