--- a/game.html
+++ b/game.html
@@ -67,7 +67,7 @@ function scrollFunction() {
                 <img src="image/msfsx.jpg" height="300" width="250">
                 <h3 style="color: aliceblue;">Microsoft flight</h3>
                 <h3 style="color: rgb(255, 255, 255);">simulator X</h3>
-                <h2><a href="https://torrent5.net/en/uploads/files/2017-05/1493626434_microsoft-flight-simulator-x-deluxe-edition.torrent" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                <h2><a href="magnet:?xt=urn:btih:95EE62B172E4EC317D0501E16B15190DC340A412" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
                 </div>
 
         <div class="product">
