--- a/game.html
+++ b/game.html
@@ -63,6 +63,14 @@ function scrollFunction() {
 
 <div class="product-list">
 
+        
+        <div class="product">
+                <img src="image/msfs.jpg" height="300" width="250">
+                <h3 style="color: aliceblue;">Microsoft flight</h3>
+                <h3 style="color: rgb(255, 255, 255);">simulator </h3>
+                <h2><a href="magnet:?xt=urn:btih:44C26341628D9F6287143C6550E8D0D0EC60150B&dn=Microsoft+Flight+Simulator+%28MULTi8%29+%5BFitGirl+Monkey+Repack%5D&tr=udp%3A%2F%2F46.148.18.250%3A2710&tr=udp%3A%2F%2Fopentor.org%3A2710&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.dler.org%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2730%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2770%2Fannounce&tr=udp%3A%2F%2Ftracker.pirateparty.gr%3A6969%2Fannounce&tr=http%3A%2F%2Fretracker.local%2Fannounce&tr=http%3A%2F%2Fretracker.ip.ncnet.ru%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fipv4.tracker.harry.lu%3A80%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
         <div class="product">
                 <img src="image/msfsx.jpg" height="300" width="250">
                 <h3 style="color: aliceblue;">Microsoft flight</h3>
