--- a/game.html
+++ b/game.html
@@ -63,6 +63,12 @@ function scrollFunction() {
 
 <div class="product-list">
 
+        <div class="product">
+                <img src="image/csgo.jpeg" height="300" width="250">
+                <h3 style="color: aliceblue;">CS:GO</h3>
+                <h3 style="color: rgb(0, 0, 0);">.</h3>
+                <h2><a href="https://se7en.ws/files/7l_csgo_v1.3_setup.exe" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
        
         <div class="product">
                 <img src="image/skyrim.jpeg" height="300" width="250">
