--- a/gallery.html
+++ b/gallery.html
@@ -190,6 +190,26 @@
 					<h3>TheGhostRider</h3>
 					</div>
 	
+    				<div class="product">
+						<video width="320" height="240" controls>
+							<source src="yt/sharma.mp4" type="video/mp4">
+						</video>
+							<h3>Zesro</h3>
+							</div>
+	
+							<div class="product">
+								<video width="320" height="240" controls>
+									<source src="yt/sharma2.mp4" type="video/mp4">
+								</video>
+									<h3>Zesro</h3>
+									</div>
+
+									<div class="product">
+										<video width="320" height="240" controls>
+											<source src="yt/sharma3.mp4" type="video/mp4">
+										</video>
+											<h3>Zesro</h3>
+											</div>
 
 				
 		
@@ -198,12 +218,8 @@
 </div>
 </div>
 
-
-<div class="wait">
-	<h2>just waiting for your art work</h2>
-</div>
 <div class="side">
-	<h2 >available : TheGhostRider</h2>
+	<h2 >available : TheGhostRider, Zesro</h2>
 	<style>
 			
 			.side{color: antiquewhite;
@@ -213,6 +229,11 @@
 	</div>
 	</style>
 </div>
+
+<div class="wait">
+	<h2>just waiting for your art work</h2>
+</div>
+
 
 <script class="javascript">
 	function search() {
