--- a/game.html
+++ b/game.html
@@ -67,14 +67,14 @@ function scrollFunction() {
                 <img src="image/csgo.jpeg" height="300" width="250">
                 <h3 style="color: aliceblue;">CS:GO</h3>
                 <h3 style="color: rgb(0, 0, 0);">.</h3>
-                <h2><a href="https://se7en.ws/files/7l_csgo_v1.3_setup.exe" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                <h2><a href="https://se7en.ws/files/7l_csgo_setup.exe" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
                 </div>
        
         <div class="product">
                 <img src="image/skyrim.jpeg" height="300" width="250">
                 <h3 style="color: aliceblue;">the elder scrolls v</h3>
                 <h3 style="color: rgb(255, 255, 255);">skyrim</h3>
-                <h2><a href="https://fs2.uploadbeast.com/games/The.Elder.Scrolls.5.Skyrim(GamingBeasts.com).zip?id=a20b506123b44234460d&expires=1717632000" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                <h2><a href="https://ia802706.us.archive.org/16/items/TESV-Skyrim/The%20Elder%20Scrolls%20V%20-%20Skyrim.rar" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
                 </div>
         
         <div class="product">
