--- a/game.html
+++ b/game.html
@@ -64,11 +64,19 @@ function scrollFunction() {
 <div class="product-list">
 
         <div class="product">
-                <img src="image/csgo.jpeg" height="300" width="250">
-                <h3 style="color: aliceblue;">CS:GO</h3>
+                <img src="image/KAMLA.jpg" height="300" width="250">
+                <h3 style="color: aliceblue;">Kamla</h3>
                 <h3 style="color: rgb(0, 0, 0);">.</h3>
-                <h2><a href="https://se7en.ws/files/7l_csgo_setup.exe" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                <h2><a href="https://torgamez.com/torrents/t54/KAMLA_L.torrent" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
                 </div>
+
+        <div class="product">
+                <img src="image/Bodycam.jpg" height="300" width="250">
+                <h3 style="color: aliceblue;">Body Cam</h3>
+                <h3 style="color: rgb(0, 0, 0);">.</h3>
+                <h2><a href="https://torgamez.com/torrents/t54/Bodycam.torrent" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
        
         <div class="product">
                 <img src="image/skyrim.jpeg" height="300" width="250">
