--- a/game.html
+++ b/game.html
@@ -64,6 +64,13 @@ function scrollFunction() {
 <div class="product-list">
 
         <div class="product">
+                <img src="image/csgo.jpg" height="300" width="250">
+                <h3 style="color: aliceblue;">CSGO</h3>
+                <h3 style="color: rgb(0, 0, 0);">.</h3>
+                <h2><a href="https://7launcher.com/dl/7l_csgo_latest_setup.exe" target="_blank"><button style="cursor: pointer;"><p > Download</p></button></a> </h2>
+                </div>
+
+        <div class="product">
                 <img src="image/KAMLA.jpg" height="300" width="250">
                 <h3 style="color: aliceblue;">Kamla</h3>
                 <h3 style="color: rgb(0, 0, 0);">.</h3>
