--- a/game.html
+++ b/game.html
@@ -269,6 +269,19 @@ function scrollFunction() {
 <h2><a href="magnet:?xt=urn:btih:61806BEBF64F31F4ED9FBDC0D963CD62214CF7CB&dn=Grand+Theft+Auto+V+%28v1.0.3095%2F1.68+%2B+NVE+Platinum+Modpack+%2B+Bonus+OSTs%2C+MULTi13%29+%5BFitGirl+Repack%2C+Selective+Download+-+from+49.2+GB%5D&tr=udp%3A%2F%2Fopentor.net%3A6969&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=http%3A%2F%2Ftracker.gbitt.info%3A80%2Fannounce&tr=http%3A%2F%2Ftracker.ccp.ovh%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.ccp.ovh%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.theoks.net%3A6969%2Fannounce&tr=https%3A%2F%2Ftracker.tamersunion.org%3A443%2Fannounce&tr=http%3A%2F%2Fopen.acgnxtracker.com%3A80%2Fannounce&tr=http%3A%2F%2Fopen.acgtracker.com%3A1096%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce" target="_blank"><button style="cursor: pointer;"><p >Torrent</p></button></a> </h2>
 </div>
 
+<div class="product">
+        <img src="image/Call-of-Duty-Black-Ops-II-pc-dvd.jpg.webp" height="300" width="250">
+        <h3 style="color: aliceblue;">Call Of Duty </h3>
+        <h3 style="color: aliceblue;">Black Ops 2</h3>
+        <h2><a href="https://fs1.uploadbeast.com/games/Call.of.Duty.Black.Ops.2(GamingBeasts.com).zip?id=18fc0303ef41841ac29c&expires=1718668800" target="_blank"><button style="cursor: pointer;"><p >RAR File</p></button></a> </h2>
+        </div>
+
+<div class="product">
+        <img src="image/Call-Of-Duty-Black-Ops-1.jpg.webp" height="300" width="250">
+        <h3 style="color: aliceblue;">Call Of Duty </h3>
+        <h3 style="color: aliceblue;">Black Ops </h3>
+        <h2><a href="https://fs1.uploadbeast.com/games/Call.of.Duty.Black.Ops(GamingBeasts.com).zip?id=96aa2a758546ca447c1d&expires=1718668800" target="_blank"><button style="cursor: pointer;"><p >RAR File</p></button></a> </h2>
+        </div>
 
 <div class="product">
 <img src="image/cod.jpeg" height="300" width="250">
