--- a/game.html
+++ b/game.html
@@ -270,14 +270,14 @@ function scrollFunction() {
 </div>
 
 <div class="product">
-        <img src="image/Call-of-Duty-Black-Ops-II-pc-dvd.jpg.webp" height="300" width="250">
+        <img src="image/codbops2.jpeg" height="300" width="250">
         <h3 style="color: aliceblue;">Call Of Duty </h3>
         <h3 style="color: aliceblue;">Black Ops 2</h3>
         <h2><a href="https://fs1.uploadbeast.com/games/Call.of.Duty.Black.Ops.2(GamingBeasts.com).zip?id=18fc0303ef41841ac29c&expires=1718668800" target="_blank"><button style="cursor: pointer;"><p >RAR File</p></button></a> </h2>
         </div>
 
 <div class="product">
-        <img src="image/Call-Of-Duty-Black-Ops-1.jpg.webp" height="300" width="250">
+        <img src="image/codbops.jpeg" height="300" width="250">
         <h3 style="color: aliceblue;">Call Of Duty </h3>
         <h3 style="color: aliceblue;">Black Ops </h3>
         <h2><a href="https://fs1.uploadbeast.com/games/Call.of.Duty.Black.Ops(GamingBeasts.com).zip?id=96aa2a758546ca447c1d&expires=1718668800" target="_blank"><button style="cursor: pointer;"><p >RAR File</p></button></a> </h2>
