--- a/game.html
+++ b/game.html
@@ -233,10 +233,11 @@ function scrollFunction() {
 <img src="image/pal.jpeg" height="300" width="250">
 <h3 style="color: aliceblue;">Palworld</h3>
 <h3 style="color: #fff;"> (v0.2.4.0)</h3>
-<h2><a href="https://bowfile.com/jfKb"target="_blank"><button style="cursor: pointer;"><p >P1</p></button></a>
-<a href="https://bowfile.com/nrTe"target="_blank"><button style="cursor: pointer;"><p >P2</p></button></a>
-<a href="https://bowfile.com/nrTh"target="_blank"><button style="cursor: pointer;"><p >P3</p></button></a>
-<a href="https://bowfile.com/nrTg"target="_blank"><button style="cursor: pointer;"><p >P4</p></button></a></h2>
+<h2><a href="https://bowfile.com/fjj1"target="_blank"><button style="cursor: pointer;"><p >P1</p></button></a>
+<a href="https://bowfile.com/b7bf"target="_blank"><button style="cursor: pointer;"><p >P2</p></button></a>
+<a href="https://bowfile.com/b7b4"target="_blank"><button style="cursor: pointer;"><p >P3</p></button></a>
+<a href="https://bowfile.com/fjkG"target="_blank"><button style="cursor: pointer;"><p >P4</p></button></a></h2>
+<a href="https://bowfile.com/fjjL"target="_blank"><button style="cursor: pointer;"><p >P5</p></button></a></h2>
  </div>
     
 <div class="product">
