--- a/game.html
+++ b/game.html
@@ -64,6 +64,13 @@ function scrollFunction() {
 <div class="product-list">
 
         <div class="product">
+                <img src="image/elderring.jpg" height="300" width="250">
+                <h3 style="color: aliceblue;">Elden Ring</h3>
+                <h3 style="color: rgb(255, 255, 255);">Shadow of the Erdtree</h3>
+                <h2><a href="blob:https://paste.fitgirl-repacks.site/e63b2afb-d927-4718-8dbd-9e28f0be8bd1" target="_blank"><button style="cursor: pointer;"><p >Torrent</p></button></a> </h2>
+                </div>
+
+        <div class="product">
                 <img src="image/csgo.jpg" height="300" width="250">
                 <h3 style="color: aliceblue;">CSGO</h3>
                 <h3 style="color: rgb(0, 0, 0);">.</h3>
@@ -135,12 +142,6 @@ function scrollFunction() {
                 <h2><a href="magnet:?xt=urn:btih:3863DB29422533F1D11755DBE032C3B66725554E&dn=Forza+Horizon+5%3A+Premium+Edition+%28v1.634.818.0+%2B+50+DLCs+%2B+Multiplayer%2C+MULTi16%29+%5BFitGirl+Repack%2C+Selective+Download+-+from+71.2+GB%5D&tr=udp%3A%2F%2Fopentor.net%3A6969&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=http%3A%2F%2Ftracker.gbitt.info%3A80%2Fannounce&tr=http%3A%2F%2Ftracker.ccp.ovh%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.ccp.ovh%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.theoks.net%3A6969%2Fannounce&tr=https%3A%2F%2Ftracker.tamersunion.org%3A443%2Fannounce&tr=http%3A%2F%2Fopen.acgnxtracker.com%3A80%2Fannounce&tr=http%3A%2F%2Fopen.acgtracker.com%3A1096%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce" target="_blank"><button style="cursor: pointer;"><p >Torrent</p></button></a> </h2>
                 </div>
 
-        <div class="product">
-                <img src="image/elderring.jpg" height="300" width="250">
-                <h3 style="color: aliceblue;">Elden Ring</h3>
-                <h3 style="color: rgb(0, 0, 0);">.</h3>
-                <h2><a href="https://torgamez.com/torrents/t73/Elden_Ring.torrent" target="_blank"><button style="cursor: pointer;"><p >Torrent</p></button></a> </h2>
-                </div>
 
         <div class="product">
                 <img src="image/cover_horizon.gif" height="300" width="250">
