--- a/game.html
+++ b/game.html
@@ -233,12 +233,12 @@ function scrollFunction() {
  <div class="product">
 <img src="image/pal.jpeg" height="300" width="250">
 <h3 style="color: aliceblue;">Palworld</h3>
-<h3 style="color: #fff;"> (v0.3.1.55394)</h3>
-<h2><a href="https://bowfile.com/fjj1"target="_blank"><button style="cursor: pointer;"><p >P1</p></button></a>
-<a href="https://bowfile.com/b7bf"target="_blank"><button style="cursor: pointer;"><p >P2</p></button></a>
-<a href="https://bowfile.com/b7b4"target="_blank"><button style="cursor: pointer;"><p >P3</p></button></a>
-<a href="https://bowfile.com/fjkG"target="_blank"><button style="cursor: pointer;"><p >P4</p></button></a></h2>
-<a href="https://bowfile.com/fjjL"target="_blank"><button style="cursor: pointer;"><p >P5</p></button></a></h2>
+<h3 style="color: #fff;"> (v0.3.2+)</h3>
+<h2><a href="https://bowfile.com/fkyZ"target="_blank"><button style="cursor: pointer;"><p >P1</p></button></a>
+<a href="https://bowfile.com/fkz0"target="_blank"><button style="cursor: pointer;"><p >P2</p></button></a>
+<a href="https://bowfile.com/b8qy"target="_blank"><button style="cursor: pointer;"><p >P3</p></button></a>
+<a href="https://bowfile.com/b8qx"target="_blank"><button style="cursor: pointer;"><p >P4</p></button></a></h2>
+<a href="https://bowfile.com/b8qr"target="_blank"><button style="cursor: pointer;"><p >P5</p></button></a></h2>
  </div>
     
 <div class="product">
