--- a/game.html
+++ b/game.html
@@ -234,11 +234,7 @@ function scrollFunction() {
 <img src="image/pal.jpeg" height="300" width="250">
 <h3 style="color: aliceblue;">Palworld</h3>
 <h3 style="color: #fff;"> (v0.3.2+)</h3>
-<h2><a href="https://bowfile.com/fkyZ"target="_blank"><button style="cursor: pointer;"><p >P1</p></button></a>
-<a href="https://bowfile.com/fkz0"target="_blank"><button style="cursor: pointer;"><p >P2</p></button></a>
-<a href="https://bowfile.com/b8qy"target="_blank"><button style="cursor: pointer;"><p >P3</p></button></a>
-<a href="https://bowfile.com/b8qx"target="_blank"><button style="cursor: pointer;"><p >P4</p></button></a></h2>
-<a href="https://bowfile.com/b8qr"target="_blank"><button style="cursor: pointer;"><p >P5</p></button></a></h2>
+<h2><a href="https://se7en.ws/files/7l_palworld_setup.exe"target="_blank"><button style="cursor: pointer;"><p >Setup</p></button></a>
  </div>
     
 <div class="product">
